objects/FINS_Banking_Late_Fee__c.object
<CustomObject>
    <fields>
        <fullName>Days_Outstanding__c</fullName>
        <label>Days Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Instruments__c</fullName>
        <description>How many financial instruments do they have with us?</description>
        <label># of instruments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mockup_Coaching__c</fullName>
        <formula>IF( AND(TEXT(Status__c) != &quot;1&quot;, TEXT(Mockup_Prediction__c) != &quot;1&quot;, NOT(ISBLANK(Mockup_Prediction__c))), &quot;Please have more touchpoints with this customer and have them sooner, since it&apos;s now in risk due to amount of days outstanding&quot;, &quot;&quot;)</formula>
        <label>Mockup Coaching</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mockup_Prediction__c</fullName>
        <label>Mockup Prediction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This is a person&apos;s name as a custom field. Chose not to add it to the Contact to make it simple for sake of demo to get the point across and avoid confusing anyone who is working on Contact UI/layouts (vs real life implementation, where relating it to a Contact makes the most sense)</description>
        <inlineHelpText>Person&apos;s name who owes the fee</inlineHelpText>
        <label>Person/Entity&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_off__c</fullName>
        <formula>IF( Status__c = 1, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid off?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Running_Amount_Due__c</fullName>
        <inlineHelpText>Total amount due, whether it&apos;s a flat fee or a moving aggregate that gets bigger over a course of time</inlineHelpText>
        <label>Running Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Touchpoints__c</fullName>
        <description>How many touchpoints did they have with us?</description>
        <label># of touchpoints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overdraft</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>Commercial Business Interest</fullName>
                </value>
                <value>
                    <fullName>Wrongful Use Penalty</fullName>
                </value>
                <value>
                    <fullName>Loan Payment Overdue</fullName>
                </value>
                <value>
                    <fullName>Consulting Service Unpaid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_with_us__c</fullName>
        <description>How many years have they been our customer?</description>
        <label>Years with us</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Late Fee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Fee_Insights</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Running_Amount_Due__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Paid_off__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unpaid Fee Insights</label>
    </listViews>
    <listViews>
        <fullName>Mockup_Unpaid_Fee_Insights</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Running_Amount_Due__c</columns>
        <columns>Type__c</columns>
        <columns>Mockup_Prediction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Paid_off__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Mockup Unpaid Fee Insights</label>
    </listViews>
    <nameField>
        <displayFormat>LATF-{0000}</displayFormat>
        <label>Late Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Late Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>